objects/tffa__Income__c.object
<CustomObject>
    <description>Captures income details of the applicant. Income is money that an individual or business receives in exchange for providing a good or service or through investing capital. Income is used to fund day-to-day expenditures.</description>
    <fields>
        <fullName>tffa__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to asset object if current income record is being captured against existing asset</description>
        <label>Asset</label>
        <referenceTo>tffa__Asset__c</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Asset</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>A free-form text field used to capture additional information when Other is selected for Income Type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__EmploymentIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates that the Income Type is from an employment source. When false, indicates that the Income Type is from a non employment source</description>
        <label>Employment indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Employment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Employment object if current income record is being captured against current employment</description>
        <label>Employment</label>
        <referenceTo>tffa__Employment__c</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Employment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FinancialInstitution__c</fullName>
        <description>Name of the financial institution in which account is held</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialYear__c</fullName>
        <description>Financial year for which data is captured as per tax records.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__GrossAnnualAmount__c</fullName>
        <description>Gross annual year-to-date pre-tax earnings, as reported on the paystub.</description>
        <label>Gross annual amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__IncomeVerificationId__c</fullName>
        <description>Unique ID of the verification request by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Income verification id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IncomeVerificationStatus__c</fullName>
        <description>The status associated with income verification .</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Income Verification Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IncomeVerificationToken__c</fullName>
        <description>Holds encrypted value of verification token for the income verification</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyAmount__c</fullName>
        <description>The dollar amount associated with the monthly income amount for the given Income Type</description>
        <label>Monthly amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OtherType__c</fullName>
        <description>Specifies the list of types of other income.</description>
        <label>Other Income Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OtherIncomeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Reference to parent party object</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Incomes</relationshipLabel>
        <relationshipName>Incomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__PayFrequency__c</fullName>
        <description>The frequency of the pay period.Possible values: monthly, semimonthly, weekly, biweekly, unknown, null</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pay Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PayerIdentificationNumber__c</fullName>
        <description>Also known as the Federal Employer Identification Number (FEIN) or the Federal Tax Identification Number, is a unique nine-digit number assigned by the Internal Revenue Service (IRS) to business entities operating in the United States for the purposes of identification.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payer identification number (FIN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PayerName__c</fullName>
        <description>Name of the payer or source of income funds</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Prefilled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true, if the data was prefilled via external system API request.</description>
        <label>Prefilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Provider__c</fullName>
        <description>The provider of the income record.For an aggregator, it will store the name of the aggregator and source will store the actual source/platform used within the aggregator.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SourceSystemId__c</fullName>
        <description>The source system id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this income if it sourced from a external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Specifies the type of income or fee that may be received for services rendered.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__IncomeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__YTDGrossAmount__c</fullName>
        <description>Gross annual year-to-date pre-tax earnings, as reported on the paystub.</description>
        <label>YTD Gross amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__YTDNetAmount__c</fullName>
        <description>Net annual year-to-date earnings after any tax withholdings, benefit payments or deductions, as reported on the paystub</description>
        <label>YTD Net amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Income</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>